--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-resource": "~1.2.16",
     "angular-route": "~1.2.16",
     "angular-sanitize": "~1.2.16",
+    "angular-touch": "~1.2.16",
     "bootstrap": "~3.1.1"
   },
   "overrides": {
