--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular-route": "~1.2.16",
     "angular-sanitize": "~1.2.16",
     "angular-touch": "~1.2.16",
+    "angular-ui-router": "~0.2.10",
     "bootstrap": "~3.1.1"
   },
   "overrides": {
