--- a/bower.json
+++ b/bower.json
@@ -16,15 +16,16 @@
     "angular": "~1.2.16",
     "angular-animate": "~1.2.16",
     "angular-bootstrap": "~0.11.0",
+    "angular-gestures": "~0.2.2",
     "angular-gettext": "~0.2.8",
     "angular-resource": "~1.2.16",
     "angular-route": "~1.2.16",
     "angular-sanitize": "~1.2.16",
-    "angular-touch": "~1.2.16",
     "angular-ui-router": "~0.2.10",
     "bootstrap": "~3.1.1",
     "es5-shim": "3.3.0",
-    "socket.io-client": "~0.9.16"
+    "socket.io-client": "~0.9.16",
+    "fastclick": "~1.0.1"
   },
   "overrides": {
     "es5-shim": {
