--- a/package.json
+++ b/package.json
@@ -19,27 +19,37 @@
     "gulp-bower-files": "^0.2.1",
     "gulp-bytediff": "^0.1.8",
     "gulp-cache": "~0.1.1",
+    "gulp-cdnizer": "^0.2.9",
     "gulp-changed": "^0.3.0",
-    "gulp-clean": "~0.2.4",
+    "gulp-cloudfront": "0.0.14",
     "gulp-coffee": "^1.4.1",
     "gulp-coffeelint": "^0.3.2",
     "gulp-connect": "~1.0.0",
     "gulp-csso": "^0.2.6",
     "gulp-filter": "^0.4.1",
     "gulp-flatten": "^0.0.2",
+    "gulp-gzip": "0.0.8",
     "gulp-htmlmin": "^0.1.2",
+    "gulp-if": "^1.2.2",
     "gulp-imagemin": "~0.1.4",
     "gulp-inject": "^0.4.1",
     "gulp-jade": "^0.4.2",
     "gulp-jshint": "~1.4.0",
     "gulp-load-plugins": "~0.3.0",
+    "gulp-ng-annotate": "^0.2.0",
+    "gulp-replace": "^0.4.0",
+    "gulp-rev-all": "^0.5.5",
+    "gulp-rimraf": "^0.1.0",
+    "gulp-s3": "^0.3.0",
     "gulp-sass": "^0.7.1",
     "gulp-size": "~0.1.2",
     "gulp-uglify": "^0.2.1",
     "gulp-useref": "^0.4.3",
     "gulp-util": "^2.2.14",
     "jshint-stylish": "^0.1.5",
+    "psi": "^0.1.1",
     "run-sequence": "^0.3.6",
+    "streamqueue": "^0.1.1",
     "wiredep": "^1.4.3"
   },
   "engines": {
